--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -1,21 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".Create_Account">
-    <ScrollView
-        android:layout_marginTop="30dp"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:fillViewport="true">
 
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:gravity="center"
-            android:orientation="vertical"
-            android:padding="20dp">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginHorizontal="32dp"
+        android:layout_marginVertical="16dp"
+        android:background="@drawable/rounded_corner"
+        android:padding="20dp"
+        tools:context=".CreateAccountActivity">
 
         <ImageView
             android:id="@+id/sign_up_icon"
@@ -28,17 +27,14 @@
             android:layout_marginStart="69dp"
             android:layout_marginTop="34dp"
             android:layout_marginEnd="69dp"
-
-            android:src="@drawable/carelogo">
-
-        </ImageView>
+            android:src="@drawable/carelogo"
+            ></ImageView>
 
         <LinearLayout
             android:id="@+id/hello_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/sign_up_icon"
-            android:gravity="center"
             android:orientation="vertical">
 
             <TextView
@@ -70,7 +66,6 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/hello_text"
             android:layout_marginVertical="32dp"
-            android:gravity="center"
             android:orientation="vertical">
 
             <EditText
@@ -78,8 +73,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
-                android:background="@color/gray_400"
-                android:hint="Email id"
+                android:background="@drawable/rounded_corner"
+                android:hint="emailId"
                 android:inputType="textEmailAddress"
                 android:padding="16dp"
                 android:textSize="20dp">
@@ -91,8 +86,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
-                android:background="@color/gray_400"
-                android:hint="Password"
+                android:background="@drawable/rounded_corner"
+                android:hint="password"
                 android:inputType="textPassword"
                 android:padding="16dp"
                 android:textSize="20dp">
@@ -104,8 +99,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
-                android:background="@color/gray_400"
-                android:hint="Confirm Password"
+                android:background="@drawable/rounded_corner"
+                android:hint="confirmPassword"
                 android:inputType="textPassword"
                 android:padding="20dp"
                 android:textSize="20dp">
@@ -149,7 +144,7 @@
                 android:id="@+id/login_text_view_btn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/baseline_rectangle_24"
+                android:background="@drawable/rounded_corner"
                 android:backgroundTint="@color/teal_200"
                 android:padding="16dp"
                 android:text="Login"
@@ -161,7 +156,6 @@
             </TextView>
 
         </LinearLayout>
-        </LinearLayout>
-    </ScrollView>
+    </RelativeLayout>
 
-</RelativeLayout>
+</ScrollView>
