--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="green">#4EA502</color>
     <color name="red">#F44336</color>
-    <color name="colorprimary">#0822AF</color>
+    <color name="colorprimary">#6DCAF4</color>
     <color name="light_blue_400">#FF29B6F6</color>
     <color name="light_blue_600">#FF039BE5</color>
     <color name="gray_400">#FFBDBDBD</color>
